navbar & fullpage.js communication and tasks edit in gulp

--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SKN Eko-Energia</title>
     <!-- inject:css -->
     <!-- endinject -->
@@ -21,13 +23,13 @@
           </a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-         <ul class="nav navbar-nav navbar-right">
-           <li><a data-menuanchor="home" href="#home">Start</a></li>
-           <li><a data-menuanchor="onas" href="#onas">O nas</a></li>
-           <li><a data-menuanchor="proj" href="#proj">Projekty</a></li>
-           <li><a data-menuanchor="events" href="#events">Wydarzenia</a></li>
-           <li><a data-menuanchor="news" href="#news">Aktualności</a></li>
-           <li><a data-menuanchor="contact" href="#contact">Kontakt</a></li>
+         <ul id="mainMenu" class="nav navbar-nav navbar-right">
+           <li data-menuanchor="home" class="active"><a href="#home">Start</a></li>
+           <li data-menuanchor="onas"><a href="#onas">O nas</a></li>
+           <li data-menuanchor="proj"><a href="#proj">Projekty</a></li>
+           <li data-menuanchor="events"><a href="#events">Wydarzenia</a></li>
+           <li data-menuanchor="news"><a href="#news">Aktualności</a></li>
+           <li data-menuanchor="contact"><a href="#contact">Kontakt</a></li>
          </ul>
         </div>
       </div>
