--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -36,10 +36,36 @@
     </nav>
     <div id="fullpage">
       <div id="s1" data-anchor="home" class="section">
-        <h1>Start</h1>
+        <img src="img/clogo.png" alt="logo koła" />
+        <h1>Studenckie Koło Naukowe Eko-Energia</h1>
       </div>
       <div id="s2" data-anchor="onas" class="section">
-        <h1>O nas</h1>
+        <div id="counters" class="container">
+          <div class="counter-container">
+            <div class="counter" id="c1"></div>
+            <h5>Lat działalności</h3>
+          </div>
+          <div class="counter-container">
+            <div class="counter" id="c2"></div>
+            <h5>Grantów rektorskich</h3>
+          </div>
+          <div class="counter-container">
+            <div class="counter" id="c3"></div>
+            <h5>Projektów</h3>
+          </div>
+          <div class="counter-container">
+            <div class="counter" id="c4"></div>
+            <h5>Członków</h3>
+          </div>
+          <div class="counter-container">
+            <div class="counter" id="c5"></div>
+            <h5>Wydarzeń</h3>
+          </div>
+        </div>
+        <div id="opis">
+          <h4>Działamy przy wydziale Energetyki i Paliw w Akademii Górniczo-Hutniczej. Tworzymy grupę pasjonatów odnawialnej energii i nieustannie rozszerzamy naszą działalność. Jako oficjalnie najlepsze koło AGH, każdego semestru przyciągamy tłumnie nowych, ambitnych i zaangażowanych członków.
+Skontaktuj się z nami!</h4>
+        </div>
       </div>
       <div id="s3" data-anchor="proj" class="section">
         <h1>Projekty</h1>
@@ -54,8 +80,6 @@
         <h1>Kontakt</h1>
       </div>
     </div>
-  <!-- bower:js -->
-  <!-- endbower -->
   <!-- inject:js -->
   <!-- endinject -->
   </body>
